# BOT

./: .gitignore  BOT_Extrapolation-v5.ipynb  Converging Densities.ipynb  Converging_Densities_Quadratic_Extrap.ipynb  DESIGN.md  PVTO&PVTG_example.xlsx  README.md  pyproject.toml
botkit/: __init__.py  eos.py  extend.py  extend_low.py  fill.py  interpolate.py  io.py  kvalues.py  model.py  pipeline.py  qc.py  report.py  undersat_extend.py  viscosity.py
notebooks/: BOT_QC_and_Extension.ipynb
phz/band-validation/: Permian-band-validation.phz
scripts/: gen_phazecomp_band_validation.py  locate_pc_from_satp.py
tests/: test_eos.py  test_interpolate.py  test_io.py  test_kvalues.py  test_qc.py  test_roundtrip.py  test_undersat_extend.py  test_viscosity.py
