[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "botkit"
version = "0.1.0"
description = "Black-Oil Table quality-control and extension toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mark Burgoyne" }]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.4",
    "scipy>=1.8",
    "openpyxl>=3.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["botkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
